<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="content_description">Immagine</string>

    <!-- View dettaglio -->
    <string name="app_name">Registrazione</string>
    <string name="title_cliente_detail">Cliente Detail</string>
    <string name="text_view_nome">Nome:</string>
    <string name="text_view_cognome">Cognome:</string>
    <string name="text_view_numero">Numero:</string>
    <string name="text_view_foto_viso">Foto viso:</string>
    <string name="text_view_foto_documento_fronte">Foto documento fronte:</string>
    <string name="text_view_foto_documento_retro">Foto documento retro:</string>
    <string name="text_view_foto_modulo_fronte">Foto modulo fronte:</string>
    <string name="text_view_foto_modulo_retro">Foto modulo retro:</string>
    <string name="button_foto">Seleziona foto</string>
    <string name="button_foto_modifica">Modifica</string>
    <string name="button_modifica">Modifica</string>    

    <!-- Lista elementi -->
    <string name="button_nuovo_text">Nuovo</string>
    <string name="button_salva">Salva</string>

    <!-- Dialog scelta -->
    <string name="dialog_title">Opzioni acquisizione</string>
    <string name="dialog_text">Selezionare origine immagine:</string>
    <string name="button_galleria">Galleria</string>
    <string name="button_camera">Fotocamera</string>

    <!-- Dialog campi vuoti -->
    <string name="dialog_vuoti_title">Attenzione</string>
    <string name="dialog_vuoti_text">Campi richiesti mancanti</string>

    <!-- Dialog esito -->
    <string name="dialog_ok_text">Salvataggio informazioni avvenuto con successo</string>
    <string name="dialog_ko_text">Errore nel salvataggio delle informazioni</string>
    <string name="dialog_dir_exist_text">Errore: numero esistente</string>

    <!-- Dialog eliminazione -->

    <string name="dialog_elimina_title">Elimina</string>
    <string name="dialog_elimina_text">Confermare eliminazione?</string>
    <string name="button_ok">OK</string>
    <string name="button_annulla">Annulla</string>

</resources>