<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    	android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <LinearLayout
            android:id="@+id/layout_nome"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/detail_element_height"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="@dimen/detail_label_width"
                android:layout_height="wrap_content"
                android:text="@string/text_view_nome" />

            <EditText
                android:id="@+id/edit_text_nome"
                android:layout_width="@dimen/detail_edit_text_width"
                android:layout_height="@dimen/detail_element_height"
                android:inputType="textCapSentences" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_cognome"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/detail_element_height"
            android:layout_below="@+id/layout_nome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/item_margin_top"
            android:orientation="horizontal" >

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="@dimen/detail_label_width"
                android:layout_height="wrap_content"
                android:text="@string/text_view_cognome" />

            <EditText
                android:id="@+id/edit_text_cognome"
                android:layout_width="@dimen/detail_edit_text_width"
                android:layout_height="@dimen/detail_element_height"
                android:inputType="textCapSentences" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_numero"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/detail_element_height"
            android:layout_below="@+id/layout_cognome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/item_margin_top"
            android:orientation="horizontal" >

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="@dimen/detail_label_width"
                android:layout_height="wrap_content"
                android:text="@string/text_view_numero" />

            <EditText
                android:id="@+id/edit_text_numero"
                android:layout_width="@dimen/detail_edit_text_width"
                android:layout_height="@dimen/detail_element_height"
                android:inputType="number" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_foto_viso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/layout_numero"
            android:layout_below="@+id/layout_numero"
            android:layout_marginTop="@dimen/item_margin_top"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="@dimen/detail_label_width"
                android:layout_height="wrap_content"
                android:text="@string/text_view_foto_viso" />

            <ImageView
                android:id="@+id/imageview_foto_viso"
                android:layout_width="@dimen/img_width"
                android:layout_height="@dimen/img_width"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/content_description"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_foto_viso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/greenbutton_big"
                android:text="@string/button_foto"
                android:textColor="@color/ti_deep_green"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_foto_documento_fronte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/layout_numero"
            android:layout_below="@+id/layout_foto_viso"
            android:layout_marginTop="@dimen/item_margin_top"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="@dimen/detail_label_width"
                android:layout_height="wrap_content"
                android:text="@string/text_view_foto_documento_fronte" />

            <ImageView
                android:id="@+id/imageview_foto_documento_fronte"
                android:layout_width="@dimen/img_width"
                android:layout_height="@dimen/img_width"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/content_description"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_foto_documento_fronte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/greenbutton_big"
                android:text="@string/button_foto"
                android:textColor="@color/ti_deep_green"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_foto_documento_retro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/layout_numero"
            android:layout_below="@+id/layout_foto_documento_fronte"
            android:layout_marginTop="@dimen/item_margin_top"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="@dimen/detail_label_width"
                android:layout_height="wrap_content"
                android:text="@string/text_view_foto_documento_retro" />

            <ImageView
                android:id="@+id/imageview_foto_documento_retro"
                android:layout_width="@dimen/img_width"
                android:layout_height="@dimen/img_width"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/content_description"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_foto_documento_retro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/greenbutton_big"
                android:text="@string/button_foto"
                android:textColor="@color/ti_deep_green"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_foto_modulo_fronte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/layout_numero"
            android:layout_below="@+id/layout_foto_documento_retro"
            android:layout_marginTop="@dimen/item_margin_top"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="@dimen/detail_label_width"
                android:layout_height="wrap_content"
                android:text="@string/text_view_foto_modulo_fronte" />

            <ImageView
                android:id="@+id/imageview_foto_modulo_fronte"
                android:layout_width="@dimen/img_width"
                android:layout_height="@dimen/img_width"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/content_description"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_foto_modulo_fronte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/greenbutton_big"
                android:text="@string/button_foto"
                android:textColor="@color/ti_deep_green"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_foto_modulo_retro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/layout_numero"
            android:layout_below="@+id/layout_foto_modulo_fronte"
            android:layout_marginTop="@dimen/item_margin_top"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/FormLabelStyle"
                android:layout_width="@dimen/detail_label_width"
                android:layout_height="wrap_content"
                android:text="@string/text_view_foto_modulo_retro" />

            <ImageView
                android:id="@+id/imageview_foto_modulo_retro"
                android:layout_width="@dimen/img_width"
                android:layout_height="@dimen/img_width"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/content_description"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_foto_modulo_retro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/greenbutton_big"
                android:text="@string/button_foto"
                android:textColor="@color/ti_deep_green"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_salva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/item_margin_top"
            android:background="@drawable/redbutton"
            android:text="@string/button_salva"
            android:textColor="@color/ti_red"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_modifica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/item_margin_top"
            android:background="@drawable/redbutton"
            android:text="@string/button_modifica"
            android:textColor="@color/ti_red"
            android:textSize="18sp" />
    </RelativeLayout>

</ScrollView>